--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <title>NAUTBOL | Full Stack Developer</title>
+    <title>KUANTYK | Full Stack Developer</title>
   </head>
   <body class="bg-dark-900">
     <div id="root"></div>
