--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
 <body class="bg-dark-900">
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
+  <script type='text/javascript'
+    src='//pl27193348.profitableratecpm.com/7c/58/aa/7c58aaa8a64c18c6d4fa5e52db8f19f1.js'></script>
 </body>
 
 </html>
