--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
   <title>KUANTYK | Full Stack Developer</title>
 
   <!-- Adsterra Popunder -->
-  <script>
+  <!-- <script>
     if (location.hostname.includes("kuantyk.com")) {
       const adsterraScript = document.createElement("script");
       adsterraScript.src = "//pl27244044.profitableratecpm.com/fb/d1/30/fbd1301d912c36dacde4b7b4ac9ebed5.js";
       adsterraScript.type = "text/javascript";
       document.head.appendChild(adsterraScript);
     }
-  </script>
+  </script> -->
 </head>
 
 <body class="bg-dark-900">
