--- a/index.html
+++ b/index.html
@@ -19,21 +19,22 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap"
     rel="stylesheet">
   <title>KUANTYK | Full Stack Developer</title>
-
-  <!-- Adsterra Popunder -->
-  <!-- <script>
-    if (location.hostname.includes("kuantyk.com")) {
-      const adsterraScript = document.createElement("script");
-      adsterraScript.src = "//pl27244044.profitableratecpm.com/fb/d1/30/fbd1301d912c36dacde4b7b4ac9ebed5.js";
-      adsterraScript.type = "text/javascript";
-      document.head.appendChild(adsterraScript);
-    }
-  </script> -->
 </head>
 
 <body class="bg-dark-900">
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
+
+  <!-- Adsterra -->
+  <script>
+    if (location.hostname.includes("kuantyk.com")) {
+      const adsterraScript = document.createElement("script");
+      adsterraScript.src = "//pl27193348.profitableratecpm.com/7c/58/aa/7c58aaa8a64c18c6d4fa5e52db8f19f1.js";
+      adsterraScript.type = "text/javascript";
+      document.head.appendChild(adsterraScript);
+    }
+  </script>
+
 </body>
 
 </html>
