--- a/index.html
+++ b/index.html
@@ -11,14 +11,47 @@
 
     gtag('config', 'G-K4R21NZJYD');
   </script>
+
+  <title>KUANTYK | Desarrollo Web, Apps y Soluciones Digitales</title>
+
+  <meta name="description"
+    content="Portafolio profesional de KUANTYK: desarrollo de sitios web, aplicaciones móviles y soluciones informáticas a medida. Conoce nuestros proyectos y servicios digitales." />
+
+  <meta name="keywords"
+    content="KUANTYK, desarrollo web, apps móviles, software a medida, soluciones digitales, portafolio, programación, diseño web, desarrollo Android, desarrollo iOS" />
+
+  <meta name="author" content="KUANTYK" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <link rel="canonical" href="https://www.kuantyk.com/" />
+
+  <!-- Open Graph -->
+  <meta property="og:title" content="KUANTYK | Desarrollo Web, Apps y Soluciones Digitales" />
+  <meta property="og:description"
+    content="Descubre el portafolio de KUANTYK: soluciones digitales a medida, desarrollo web y apps modernas, diseño funcional e innovación tecnológica." />
+  <meta property="og:url" content="https://www.kuantyk.com/" />
+  <meta property="og:type" content="website" />
+  <meta property="og:site_name" content="KUANTYK" />
+  <meta property="og:image" content="https://www.kuantyk.com/og-image.png" />
+
+  <!-- Twitter Cards -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="KUANTYK | Desarrollo Web, Apps y Soluciones Digitales" />
+  <meta name="twitter:description"
+    content="Portafolio de KUANTYK: desarrollo de sitios web, aplicaciones móviles, sistemas informáticos personalizados y más." />
+  <meta name="twitter:image" content="https://www.kuantyk.com/og-image.png" />
+  <meta name="twitter:site" content="@NAUTBOL" />
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap"
     rel="stylesheet">
-  <title>KUANTYK | Full Stack Developer</title>
+
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
 </head>
 
 <body class="bg-dark-900">
