--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
     gtag('config', 'G-K4R21NZJYD');
   </script>
 
-  <title>KUANTYK | Desarrollo Web, Apps y Soluciones Digitales</title>
+  <title>KUANTYK | Web Development, Apps & Digital Solutions</title>
 
   <meta name="description"
-    content="Portafolio profesional de KUANTYK: desarrollo de sitios web, aplicaciones móviles y soluciones informáticas a medida. Conoce nuestros proyectos y servicios digitales." />
+    content="Professional portfolio of KUANTYK: custom websites, mobile apps, and digital solutions. Discover our tech services and recent projects." />
 
   <meta name="keywords"
-    content="KUANTYK, desarrollo web, apps móviles, software a medida, soluciones digitales, portafolio, programación, diseño web, desarrollo Android, desarrollo iOS" />
+    content="KUANTYK, web development, mobile apps, custom software, digital solutions, portfolio, programming, web design, Android development, iOS development" />
 
   <meta name="author" content="KUANTYK" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -27,9 +27,9 @@
   <link rel="canonical" href="https://www.kuantyk.com/" />
 
   <!-- Open Graph -->
-  <meta property="og:title" content="KUANTYK | Desarrollo Web, Apps y Soluciones Digitales" />
+  <meta property="og:title" content="KUANTYK | Web Development, Apps & Digital Solutions" />
   <meta property="og:description"
-    content="Descubre el portafolio de KUANTYK: soluciones digitales a medida, desarrollo web y apps modernas, diseño funcional e innovación tecnológica." />
+    content="Explore KUANTYK's portfolio: tailored digital solutions, modern web and mobile app development, functional design, and tech innovation." />
   <meta property="og:url" content="https://www.kuantyk.com/" />
   <meta property="og:type" content="website" />
   <meta property="og:site_name" content="KUANTYK" />
@@ -37,9 +37,9 @@
 
   <!-- Twitter Cards -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="KUANTYK | Desarrollo Web, Apps y Soluciones Digitales" />
+  <meta name="twitter:title" content="KUANTYK | Web Development, Apps & Digital Solutions" />
   <meta name="twitter:description"
-    content="Portafolio de KUANTYK: desarrollo de sitios web, aplicaciones móviles, sistemas informáticos personalizados y más." />
+    content="KUANTYK portfolio: web development, mobile apps, custom software systems and more." />
   <meta name="twitter:image" content="https://www.kuantyk.com/og-image.png" />
   <meta name="twitter:site" content="@NAUTBOL" />
 
