--- a/index.html
+++ b/index.html
@@ -59,14 +59,14 @@
   <script type="module" src="/src/main.tsx"></script>
 
   <!-- Adsterra -->
-  <script>
+  <!-- <script>
     if (location.hostname.includes("kuantyk.com")) {
       const adsterraScript = document.createElement("script");
       adsterraScript.src = "//pl27193348.profitableratecpm.com/7c/58/aa/7c58aaa8a64c18c6d4fa5e52db8f19f1.js";
       adsterraScript.type = "text/javascript";
       document.head.appendChild(adsterraScript);
     }
-  </script>
+  </script> -->
 
 </body>
 
