--- a/index.html
+++ b/index.html
@@ -77,6 +77,13 @@
     }
   </script> -->
 
+  <div id="ezoic-pub-ad-placeholder-101"></div>
+  <script>
+    ezstandalone.cmd.push(function () {
+      ezstandalone.showAds(115);
+    });
+  </script>
+
 </body>
 
 </html>
