--- a/index.html
+++ b/index.html
@@ -57,6 +57,17 @@
 <body class="bg-dark-900">
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
+
+  <script>
+    if (window.location.hostname.includes("kuantyk.com")) {
+      const script = document.createElement("script");
+      script.src = "https://fpyf8.com/88/tag.min.js";
+      script.async = true;
+      script.setAttribute("data-zone", "160222");
+      script.setAttribute("data-cfasync", "false");
+      document.body.appendChild(script);
+    }
+  </script>
 </body>
 
 </html>
