--- a/index.html
+++ b/index.html
@@ -52,6 +52,20 @@
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
   <link rel="manifest" href="/site.webmanifest">
+
+
+  <script src="https://cdn.brevo.com/js/sdk-loader.js" async></script>
+  <script>
+    // Version: 2.0
+    window.Brevo = window.Brevo || [];
+    Brevo.push([
+      "init",
+      {
+        client_key: "nkchqgorqj5k9q0pt4rmv0ge"
+      }
+    ]);
+  </script>
+
 </head>
 
 <body class="bg-dark-900">
