--- a/index.html
+++ b/index.html
@@ -57,6 +57,10 @@
 <body class="bg-dark-900">
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
+
+  <script async="async" data-cfasync="false"
+    src="//pl27679630.revenuecpmgate.com/f1866a21d163bef65ca0b325065eba8e/invoke.js"></script>
+  <div id="container-f1866a21d163bef65ca0b325065eba8e"></div>
 </body>
 
 </html>
